--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jellyfin-discord-bot",
   "type": "module",
   "private": true,
+  "version": "1.0.0",
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@types/bun": "^1.3.5",
